2010-09-05  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/extconf.rb, ext/oci8/oci8.h, ext/oci8/oci8lib.c,
	  ext/oci8/ocinumber.c: use rb_intern() to retrieve IDs of '+', '-',
	    '*' and '/' on rubinus.
	* ext/oci8/oradate.c: use rb_call_super() instead of
	    rb_obj_init_copy(), which is not declared in rubinus.

2010-08-28  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/env.c: fix for rubinius.

2010-08-28  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/env.c, ext/oci8/error.c, ext/oci8/extconf.rb, ext/oci8/oci8.c,
	  ext/oci8/oci8.h, oci8/oci8lib.c, ext/oci8/ocinumber.c: fix for rubinius.
	    Note that this is not enough to compile ruby-oci8 on it.

2010-08-23  KUBO Takehiro  <kubo@jiubao.org>
	* lib/oci8/object.rb: fix an error when SDO_GEOMETRY is used
	    and $VERBOSE is set.
	* test/test_oranumber.rb: change a testcase for ruby 1.9.2.
	    Math::atan2(0, 0) behaviour was changed in 1.9.2.

2010-08-15  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/lob.c, ext/oci8/object.c, ext/oci8/oci8.h,
	  lib/oci8/object.rb: support LOB datatypes in Oracle objects.
	* ext/oci8/ocihandle.c: fix SEGV in finalizer when temporary LOBs
	    are used. This bug was introduced by the previous commit.

2010-08-15  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/apiwrap.yml, ext/oci8/lob.c: fix memory leak when temporary
	    lobs are used.

2010-08-14  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/bind.c: fix a bug that a string is bound to RAW.
	    Its encoding had been convertd to OCI.encoding incorrectly.
	    (backport from the trunk)
	* ext/oci8/stmt.c: fix SEGV when an exception is raised while
	    a bind value is deallocated.
	    (backport from the trunk)

2010-04-23  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oranumber_util.c, test/test_oranumber.rb:
	    add limitted support for OraNumber's positive and negative
	    infinity. They are converted to '~' and '-~' respectively
	    as described in <URL:http://www.ixora.com.au/notes/infinity.htm>.
